--- a/vue3_schoolProject/admin.html
+++ b/vue3_schoolProject/admin.html
@@ -7,6 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
+    <h3>admin</h3>
     <div id="app"></div>
     <script type="module" src="./src/pages/admins/main.ts"></script>
   </body>
