admin_category_fix

--- a/vue3_schoolProject/index.html
+++ b/vue3_schoolProject/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico">
+  <link href="../vue3_schoolProject/src/assets/index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <meta name="referrer" content="no-referrer"> -->
   <title>Vite App</title>
 </head>
 
-<body>
+<body style="margin: 0;">
   <div id="app"></div>
   <script type="module" src="./src/pages/index/main.ts"></script>
 </body>
